2001-06-08  Denis V. Dmitrienko  <denix@kde.org>

	* admin/acinclude.m4.in, admin/config.guess, admin/config.sub,
	admin/install-sh, admin/libtool.m4.in, admin/ltcf-c.sh,
	admin/ltcf-cxx.sh, admin/ltcf-gcj.sh, admin/ltconfig,
	admin/ltmain.sh, admin/Makefile.am, admin/missing,
	admin/mkinstalldirs, configure.in:
	Updated autoconf/automake files from KDE to support autoconf 2.50

	* doc/bindings/python/.cvsignore, doc/bindings/python/Makefile.am,
	doc/bindings/.cvsignore, doc/bindings/Makefile.am, doc/.cvsignore,
	doc/Makefile.am, bindings/python/.cvsignore,
	bindings/python/Makefile.am, bindings/cpp/.cvsignore,
	bindings/cpp/Makefile.am, bindings/.cvsignore,
	bindings/Makefile.am, admin/.cvsignore, admin/Makefile.am,
	configure.in, Makefile.am, README, VERSION:
	Version bumped to 1.2.0

	* icqlib/icqpacket.c, icqlib/list.c: Fixed Alpha-specific warnings.

	* admin/icqlib.m4.in, icqlib.spec.in, icqlib-1.0.0.lsm, DEVEL,
	AUTHORS:
	Changed email address.

	* icqlib/icqlib.c:
	Added UpdateSuccess & UpdateFailure callacks initialization.

2001-06-05  Denis V. Dmitrienko  <denix@kde.org>

	* icqlib/icqbyteorder.h, configure.in:
	Applied patch by Lars Christensen <larsch@cs.auc.dk> to use portable
	autoconf's endianness test.

	* icqlib/icq.h.in, icqlib/udp.h, icqlib/udphandle.c:
	Applied patch by Lars Christensen <larsch@cs.auc.dk> which adds 2 new
	callbacks - icq_UpdateSuccess & icq_UpdateFailure

2001-06-05  Denis V. Dmitrienko  <denix@kde.org>

	* icqlib/udphandle.c: Added code to send invisible list on login.

	* AUTHORS: Added Michael Hudson.

	* CHANGES_SINCE_0.1.3:
	Added 0.1.3 -> 1.0.0 migration comments by Peter M. Lemmen
	<pmlemmen@users.sourceforge.net>

	* icqlib/icq.h.in, icqlib/contacts.c:
	Changed parameter's name for readability.

	* icqlib/icqlib.c, icqlib/tcp.c: Cleanups.

	* CHANGES_SINCE_1.0: Spell-checked.

2001-06-05  Michael Hudson  <mwh21@cam.ac.uk>

	* bindings/python/icqlibmodule.c:
	Whitespace prettyification; no functional changes.